# cmake-example

./: CMakeLists.txt  Makefile  README.md
include/controllers/: JsonController.h  MyController.h
src/: main.cpp
src/controllers/: JsonController.cpp  MyController.cpp
